# tako

./: .gitignore  LICENSE  NOTICE  README.md  config.example.yaml  install.sh  pyproject.toml
commands/: tako-check.md  tako-guide.md  tako-list.md  tako-retype.md  tako-update.md  tako.md
tako/: __init__.py  __main__.py  adf_to_md.py  auth.py  clipboard.py  config.py  fields.py  guide.py  issue_draft.py  jira_client.py  list_output.py  list_query.py  main.py  prompts.py
tako/templates/: body_guide.md
tests/: test_guide.py  test_retype.py
